syntax = "proto3";

package model;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_package = "io.toxa108.pokerito.userservice.proto";
option java_multiple_files = true;

service UserService {
}
